Evaluate macro expressions.

BUG:160287
FIXED-IN:4.11.6
(cherry picked from commit ba07c01dea08c011393237a8d3e9ebc0a0604dc0)

Conflicts:
	umbrello/codeimport/kdevcppparser/preprocesslexer.h